--- a/imagegallery/imagestyles.css
+++ b/imagegallery/imagestyles.css
@@ -15,6 +15,7 @@
       display: flex;
       align-items: center;
       margin-top: -30px;
+      margin-left: 45px;
   }
   .p1 img {
     max-width: 200px;
